# discord-countdown

./: .gitignore  README.md  RUST_REWRITE.md  dates.api.sh  index.js  package-lock.json  package.json
countdown-manager/: Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json
countdown-manager/deploy/: apache.conf  dates-api.service
countdown-manager/src/: lib.rs
countdown-manager/style/: tailwind.css
dates/: 20201122.txt  20201219.txt  20201222.txt  20210120.txt  20210219.txt  20210501.txt  20210530.txt  20210728.txt  20211126.txt  20220328.txt  20220402.txt  20220501.txt  20220526.txt  20220604.txt  20221120.txt  20221125.txt  20221218.txt  20221220.txt  20221225.txt  20230120.txt  20230204.txt  20230304.txt  20230501.txt  20230720.txt  20240219.txt  20240501.txt  20240530.txt  20240728.txt  20241031.txt  20241103.txt  20241105.txt  20241128.txt  20241225.txt  20250523.txt  20250829.txt  20251201.txt  20251218.txt  20260102.txt  20260120.txt  20260221.txt  (+5 more)
dates-api/: Cargo.toml  README.md
dates-api/src/: bindings.rs  lib.rs
dates-api/wit/: world.wit
discord-countdown-rs/: Cargo.toml  README.md
discord-countdown-rs/src/: countdown.rs  dates.rs  handler.rs  main.rs
